# pr-dash

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
.sqlx/: query-1bc7cc808df9ca72b3676c3fd9c5e065e466010865853b953e9f13f522b3728f.json  query-28d2b4f8820c72dc702f4859a05675ffa603290bbf0bd424b04b2e30043f42b3.json  query-809d863b0ba2613d7613b0da52a0f7b77868e220581e3deaa8b6db58199c5608.json  query-e9fc447f7f3a0d05a1d61a6d363d5facc0df9f896d83406b26afdca2f3fcd0bc.json  query-ea1e502360804688b68ab1760ad20134b0c2160383f720f8dc1826e6ba7852d0.json
migrations/: 20250104101502_create_pull_request_table.down.sql  20250104101502_create_pull_request_table.up.sql  20250104101909_create_review_table.down.sql  20250104101909_create_review_table.up.sql
src/: db.rs  main.rs  tests.rs
src/fixtures/: prs.sql  reviews.sql
