[package]
name = "pr-dash"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
dialoguer = "0.11.0"
dotenvy = "0.15.7"
envy = "0.4.2"
octocrab = "0.42.1"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "macros"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
